trunk/Archive2/34/28da2ca364cb1d/output
main.cpp:13:3: error: no matching constructor for initialization of 'A'
A a{B()};
  ^~~~~~
main.cpp:10:5: note: candidate constructor not viable: no known conversion from 'B' to 'const A &' for 1st argument
    A(A const&){}
    ^
1 error generated.
