trunk/Archive2/34/28da2ca364cb1d/main.cpp
struct A;

struct B
{
    operator A();
};

struct A
{
    A(A const&){}
};

A a{B()};
